--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
-    "vuetify": "^3.1.10"
+    "vuetify": "^3.1.10",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@mdi/font": "^7.2.96",
     "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
